--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>me.justindevb</groupId>
 	<artifactId>AntiCheatReplay</artifactId>
-	<version>2.7.21</version>
+	<version>2.7.22</version>
 	<packaging>jar</packaging>
 
 	<name>AntiCheatReplay</name>
@@ -52,7 +52,7 @@
 		<dependency>
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot-api</artifactId>
-			<version>1.21-R0.1-SNAPSHOT</version>
+			<version>1.21.6-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -64,9 +64,10 @@
 		<dependency>
 			<groupId>com.github.Jumper251</groupId>
 			<artifactId>AdvancedReplay</artifactId>
-			<version>1.8.12</version>
+			<version>1.8.14</version>
 			<scope>system</scope>
 			<systemPath>${project.basedir}/bin/Replay.jar</systemPath>
+
 		</dependency>
 
 		<!--
@@ -339,11 +340,10 @@
 		</dependency>
 
 		<dependency>
-			<groupId>me.justindevb</groupId>
+			<groupId>com.github.JustinDevB</groupId>
 			<artifactId>GladiatorAPI</artifactId>
-			<version>1.0</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/bin/GladiatorAPI-1.0-SNAPSHOT.jar</systemPath>
+			<scope>provided</scope>
+			<version>-53b561dfe9-1</version>
 		</dependency>
 		<dependency>
 			<groupId>ai.idealistic.vacan</groupId>
@@ -364,6 +364,7 @@
 			<version>latest</version>
 			<scope>compile</scope>
 		</dependency>
+
 
 	</dependencies>
 
